<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_accelerometer_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myd.sensorapps.coreapps.view.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay">
        <TextView
            android:id="@+id/fragment_accelerometer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </ScrollView>


    <TextView
        android:id="@+id/fragment_accelerometer_empty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_centerInParent="true"
        android:text="@string/empty_data_text"/>

    <ProgressBar
        android:id="@+id/fragment_accelerometer_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />


</RelativeLayout>
